--- a/notebooks/NMM.ipynb
+++ b/notebooks/NMM.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook implements a network of neural mass models (NMMs) within which there is an epileptogenic network. The goal is to make a simple simulationa of an epileptic brain. "
+    "This notebook implements a network of neural mass models (NMMs) within which there is an epileptogenic network. The goal is to make a simple simulation of an epileptic brain. "
    ]
   },
   {
