--- a/notebooks/betweenness_centrality.ipynb
+++ b/notebooks/betweenness_centrality.ipynb
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1151,6 @@
    ],
    "source": [
     "import networkx as nx\n",
-    "import numpy as np\n",
     "\n",
     "connectivity_matrix = idx_cm_2[429]\n",
     "N = connectivity_matrix.shape[0]\n",
@@ -1178,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,7 +1243,9 @@
     "    G_base = nx.Graph()\n",
     "    G_woi = nx.Graph()\n",
     "    # Add nodes to the graph\n",
-    "    G.add_nodes_from(range(N))\n",
+    "    G_base.add_nodes_from(range(N))\n",
+    "    G_woi.add_nodes_from(range(N))\n",
+    "\n",
     "    # Add weighted edges to the graph based on the connectivity matrix\n",
     "    for i in range(N):\n",
     "        for j in range(i + 1, N):\n",
