--- a/notebooks/check_winners.ipynb
+++ b/notebooks/check_winners.ipynb
@@ -273,12 +273,12 @@
         "# df = pd.read_csv(main_folder + f\"cvs_pairs_{woi}.csv\", usecols=[\"CM\"])\n",
         "# conn_measures = list(set(df.CM))\n",
         "\n",
-        "conn_measures = [\"PAC\", \"PEC\",\n",
+        "conn_measures = [\"PAC\",\n",
         "                 \"SCR-(0,4)\",\"SCR-(4,8)\",\"SCR-(8,13)\",\"SCR-(13,30)\",\"SCR-(30,70)\",\"SCR-(70,150)\",\n",
         "                \"SCI-(0,4)\",\"SCI-(4,8)\",\"SCI-(8,13)\",\"SCI-(13,30)\",\"SCI-(30,70)\",\"SCI-(70,150)\",\n",
         "                \"PLV-(0,4)\",\"PLV-(4,8)\",\"PLV-(8,13)\",\"PLV-(13,30)\",\"PLV-(30,70)\",\"PLV-(70,150)\",\n",
-        "                \"PLI-(0,4)\", \"PLI-(4,8)\", \"PLI-(8,13)\", \"PLI-(13,30)\", \"PLI-(30,70)\", \"PLI-(70,150)\", \n",
-        "                \"CC-(0,4)\",\"CC-(4,8)\",\"CC-(8,13)\",\"CC-(13,30)\",\"CC-(30,70)\",\"CC-(70,150)\"] "
+        "                \"PLI-(0,4)\", \"PLI-(4,8)\", \"PLI-(8,13)\", \"PLI-(13,30)\", \"PLI-(30,70)\", \"PLI-(70,150)\",\n",
+        "                \"CC-(0,4)\",\"CC-(4,8)\",\"CC-(8,13)\",\"CC-(13,30)\",\"CC-(30,70)\",\"CC-(70,150)\"]"
       ]
     },
     {
