--- a/notebooks/cvs_histogram.ipynb
+++ b/notebooks/cvs_histogram.ipynb
@@ -178,8 +178,8 @@
     "\n",
     "\n",
     "# Function to check for overlap\n",
-    "def compute_overlap(group_full_list, resection_nodes):\n",
-    "    return list(set(group_full_list).intersection(resection_nodes))\n",
+    "def compute_overlap(group1, group2):\n",
+    "    return list(set(group1).intersection(group2))\n",
     "\n",
     "# Create a function to compute the percentage of overlap\n",
     "def compute_overlap_percentage(group, resection_nodes):\n",
@@ -548,6 +548,26 @@
     "      #           # Print the results\n",
     "      #           print(f'Comparison between range {x_values[i]} and range {x_values[j]}:')\n",
     "      #           print(f'p-value: {p_value}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "# Define the parameters\n",
+    "total_cards = 99\n",
+    "total_aces = 19\n",
+    "cards_drawn = 18\n",
+    "aces_drawn = 18  # You want to calculate the probability of drawing 18 aces\n",
+    "\n",
+    "# Calculate the probability using the hypergeometric distribution formula\n",
+    "probability = (math.comb(total_aces, aces_drawn) * math.comb(total_cards - total_aces, cards_drawn - aces_drawn)) / math.comb(total_cards, cards_drawn)\n",
+    "\n",
+    "print(f\"The probability of drawing {aces_drawn} aces when drawing {cards_drawn} cards is approximately {probability:.12f}\")\n"
    ]
   }
  ],
