--- a/notebooks/epigame21-standard.ipynb
+++ b/notebooks/epigame21-standard.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,18 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from pickle import load, dump\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,19 +58,19 @@
     "# drive.mount('/content/gdrive')\n",
     "# main_folder = \"/content/gdrive/My Drive/epigame-folder/\"\n",
     "\n",
-    "main_folder = \"/home/kivi/gdrive/epigame-folder/\"\n",
+    "main_folder = \"/media/kivi/ADATA HV100/epigame-folder/\"\n",
     "\n",
-    "path_res = main_folder + \"cvs_pairs/\"\n",
+    "path_res = main_folder\n",
     "\n",
-    "path_deck = main_folder + \"decks/\"\n",
-    "path_scores = main_folder + \"game_scores/\"\n",
+    "# path_deck = main_folder + \"decks/\"\n",
+    "path_scores = main_folder + \"game_vKarla/\"\n",
     "\n",
     "woi = \"preseizure1\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "sigmas = 4\n",
-    "\n",
-    "outcome_prediction_data = pd.read_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma.xlsx\", engine='openpyxl')\n",
+    "    \n",
+    "outcome_prediction_data = pd.read_excel(path_scores+f\"surgical_outcome_data_{sigmas}sigma.xlsx\", engine='openpyxl')\n",
     "outcome_prediction_data[\"Mean_overlap_ratio\"].fillna(0, inplace=True) # if 0 winners, nan is saved, so replace it with 0\n",
     "\n",
-    "outcome_prediction_score = pd.read_excel(main_folder+f\"surgical_outcome_prediction.xlsx\")"
+    "outcome_prediction_score = pd.read_excel(main_folder+f\"1cm_rocauc_results_{sigmas}sigma.xlsx\")"
    ]
   },
   {
@@ -130,17 +129,18 @@
    "source": [
     "subs = list(range(1,22))\n",
     "\n",
-    "Subject, Outcome, CM, Strategy, Sigmas, Predictive_feature = [],[],[],[],[],[]\n",
+    "Subject, Outcome, CM, Summary_stat, Sigmas, Predictive_feature = [],[],[],[],[],[]\n",
     "\n",
-    "ps_outcome = 1\n",
+    "\n",
     "for sub in subs:\n",
-    "\n",
+    "    ps_outcome = 1\n",
+    "    \n",
     "    data_sub = outcome_prediction_data.groupby(\"Subject\").get_group(sub)\n",
-    "    score_sub = outcome_prediction_score.groupby(\"Sigmas\").get_group(sigmas)\n",
+    "    score_sub = outcome_prediction_score\n",
     "\n",
     "    print(\"\\nSubject:\", sub)\n",
     "\n",
-    "    strategies = [\"mm\", \"mx\", \"av\", \"rn\"]\n",
+    "    strategies = [\"mm\"]#, \"mx\", \"av\", \"rn\"]\n",
     "\n",
     "    for cm in conn_measures:\n",
     "\n",
@@ -150,10 +150,10 @@
     "        for strategy in strategies:\n",
     "\n",
     "            ratio = float(data_sub_cm.groupby(\"Strategy\").get_group(strategy)[\"Mean_overlap_ratio\"])\n",
-    "            auc = float(score_sub_cm.groupby(\"Strategy\").get_group(strategy)[\"MAUC\"])\n",
+    "            auc = float(score_sub_cm[\"AUC\"])\n",
     "            \n",
-    "            max_0 = max(outcome_prediction_data.groupby(\"CM\").get_group(cm).groupby(\"Strategy\").get_group(strategy).groupby(\"Outcome\").get_group(0)[\"Mean_overlap_ratio\"])\n",
-    "            min_1 = min(outcome_prediction_data.groupby(\"CM\").get_group(cm).groupby(\"Strategy\").get_group(strategy).groupby(\"Outcome\").get_group(1)[\"Mean_overlap_ratio\"])\n",
+    "            max_0 = max(outcome_prediction_data.groupby(\"CM\").get_group(cm).groupby(\"Outcome\").get_group(0)[\"Mean_overlap_ratio\"])\n",
+    "            min_1 = min(outcome_prediction_data.groupby(\"CM\").get_group(cm).groupby(\"Outcome\").get_group(1)[\"Mean_overlap_ratio\"])\n",
     "            if min_1 <= ratio <= max_0: ps_outcome = 2 # not defined\n",
     "            elif ratio > max_0: ps_outcome = 1\n",
     "            elif ratio < min_1: ps_outcome = 0\n",
@@ -164,17 +164,17 @@
     "            Subject.append(sub)\n",
     "            Outcome.append(ps_outcome)\n",
     "            CM.append(cm)\n",
-    "            Strategy.append(strategy)\n",
+    "            Summary_stat.append(strategy)\n",
     "            Sigmas.append(sigmas)\n",
     "            Predictive_feature.append(pfeat)\n",
     "\n",
-    "    epigame21_predictive_features = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"Sigmas\":Sigmas, \"Predictive_feature\":Predictive_feature})\n",
+    "    epigame21_predictive_features = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Summary_stat\":Summary_stat, \"Sigmas\":Sigmas, \"Predictive_feature\":Predictive_feature})\n",
     "    epigame21_predictive_features.to_excel(main_folder+f\"epigame21_predictive_features.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,9 +183,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject 1 outcome prediction inaccurate\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'pfeat_average' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 27\u001b[0m\n\u001b[1;32m     25\u001b[0m     Subject\u001b[38;5;241m.\u001b[39mappend(sub)\n\u001b[1;32m     26\u001b[0m     Outcome\u001b[38;5;241m.\u001b[39mappend(ps_outcome)\n\u001b[0;32m---> 27\u001b[0m     Predictive_feature\u001b[38;5;241m.\u001b[39mappend(\u001b[43mpfeat_average\u001b[49m)\n\u001b[1;32m     29\u001b[0m epigame21_predictive_features_average \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSubject\u001b[39m\u001b[38;5;124m\"\u001b[39m:Subject, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOutcome\u001b[39m\u001b[38;5;124m\"\u001b[39m:Outcome, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPredictive_feature\u001b[39m\u001b[38;5;124m\"\u001b[39m:Predictive_feature})\n\u001b[1;32m     30\u001b[0m epigame21_predictive_features_average\u001b[38;5;241m.\u001b[39mto_excel(main_folder\u001b[38;5;241m+\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mepigame21_predictive_features_average.xlsx\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pfeat_average' is not defined"
+     ]
+    }
+   ],
    "source": [
     "subs = list(range(1,22))\n",
     "bad_subs = [3,6,10,11,12,17,18]\n",
@@ -435,8 +454,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "xnn",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
