--- a/notebooks/game_vKarla_score_winner_union_res_overlap.ipynb
+++ b/notebooks/game_vKarla_score_winner_union_res_overlap.ipynb
@@ -10,15 +10,7 @@
         "id": "gzimKl2MBZXj",
         "outputId": "9c40dba2-cc95-4d6e-a540-1bfc7866436e"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/gdrive\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -36,11 +28,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "kRnbCmaEAUFm"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Index(['Unnamed: 0', 'Subject', 'Pair', 'Labels', 'CM', 'CVS'], dtype='object')"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "df_beta = pd.read_csv(main_folder + f\"cvs_pairs_{woi}.csv\")\n",
         "df_gamma = pd.read_csv(main_folder + f\"cvs_pairs_{woi}_gamma.csv\")\n",
@@ -54,11 +57,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "eg00pc90BZXk"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['PAC', 'SCR-(0,4)', 'SCI-(0,4)', 'PLV-(0,4)', 'PLI-(0,4)', 'CC-(0,4)', 'SCR-(4,8)', 'SCI-(4,8)', 'PLV-(4,8)', 'PLI-(4,8)', 'CC-(4,8)', 'SCR-(8,13)', 'SCI-(8,13)', 'PLV-(8,13)', 'PLI-(8,13)', 'CC-(8,13)', 'SCR-(13,30)', 'SCI-(13,30)', 'PLV-(13,30)', 'PLI-(13,30)', 'CC-(13,30)', 'SCR-(30,70)', 'SCI-(30,70)', 'PLV-(30,70)', 'PLI-(30,70)', 'CC-(30,70)', 'SCR-(70,150)', 'SCI-(70,150)', 'PLV-(70,150)', 'PLI-(70,150)', 'CC-(70,150)']\n"
+          ]
+        }
+      ],
       "source": [
         "connectivity_measures = list(df['CM'].unique())\n",
         "connectivity_measures.remove(\"PEC\")\n",
@@ -67,11 +78,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 27,
       "metadata": {
         "id": "I1jZ1qaIBZXk"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "14\n"
+          ]
+        }
+      ],
       "source": [
         "NODES = {\n",
         "\"1\":['P1-P2', 'P4-P5', 'P8-P9', 'P9-P10', 'P10-P11', 'G1-G2', 'G8-G9', 'G9-G10', 'G10-G11', 'G11-G12', 'M1-M2', 'M8-M9', 'M9-M10', 'M10-M11', 'M11-M12', 'O1-O2', 'O2-O3', 'O5-O6', 'O6-O7', 'F1-F2', 'F7-F8', 'F8-F9', 'F9-F10', 'F10-F11', 'F11-F12', 'F12-F13', 'A1-A2', 'A2-A3', 'A3-A4', 'A7-A8', 'A8-A9', 'A9-A10', 'A10-A11', 'B1-B2', 'B2-B3', 'B5-B6', 'B6-B7', 'B7-B8', 'B8-B9', 'C1-C2', 'C5-C6', 'C6-C7', 'C7-C8', 'C8-C9', 'C9-C10', 'Q1-Q2', 'Q2-Q3', 'Q3-Q4', 'Q4-Q5', 'Q8-Q9', 'Q9-Q10', 'Q10-Q11', 'Q11-Q12', 'T1-T2', 'T2-T3', 'T3-T4', 'T4-T5', 'T5-T6', 'T6-T7', 'T7-T8', 'T8-T9', 'T9-T10', 'T10-T11', 'T11-T12', 'D1-D2', 'D2-D3', 'D3-D4', 'D4-D5', 'D5-D6', 'D6-D7', 'D7-D8', 'E1-E2', 'E2-E3', 'E3-E4', 'E4-E5', 'E5-E6', 'E6-E7', 'E7-E8', 'E8-E9', 'E9-E10', 'E10-E11', 'L1-L2', 'L2-L3', 'L5-L6', 'L6-L7', 'L7-L8', 'U1-U2', 'U2-U3', 'U3-U4', 'U4-U5', 'U5-U6', 'U6-U7', 'J1-J2', 'J9-J10', 'J10-J11', 'J11-J12', 'J12-J13', 'J13-J14', 'J14-J15'],\n",
@@ -101,12 +120,13 @@
         "\n",
         "subs = list(range(1,22))\n",
         "poor_outcome_subjects = [3,6,10,11,12,17,18]\n",
-        "good_outcome_subjects = [s for s in subs if s not in poor_outcome_subjects+[12]]\n"
+        "good_outcome_subjects = [s for s in subs if s not in poor_outcome_subjects]\n",
+        "print(len(good_outcome_subjects))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 28,
       "metadata": {
         "id": "He1hGdTaAUFo"
       },
@@ -115,93 +135,6 @@
         "# Set a specific random seed (e.g., 42 for reproducibility)\n",
         "random_seed = 42\n",
         "np.random.seed(random_seed)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "id": "In2cLbidAUFo"
-      },
-      "outputs": [],
-      "source": [
-        "class Player:\n",
-        "    def __init__(self, AI, deck, name, n_in_hand=5):\n",
-        "        \"\"\"\n",
-        "        Initializes a Player object.\n",
-        "\n",
-        "        Parameters:\n",
-        "        - AI: The artificial intelligence strategy used by the player.\n",
-        "        - deck: The deck of cards available for the player.\n",
-        "        - name: The name of the player.\n",
-        "        - n_in_hand: The number of cards initially dealt to the player's hand.\n",
-        "        \"\"\"\n",
-        "        self.deck = deck\n",
-        "        self.n_in_hand = n_in_hand\n",
-        "        self.logic = AI\n",
-        "        self.cards = []  # Player's hand\n",
-        "        self.score = []  # Player's score (not used in the provided code)\n",
-        "        self.name = name\n",
-        "\n",
-        "    def shuffle(hand):\n",
-        "            hand.cards = sorted(hand.deck)\n",
-        "\n",
-        "    def check(scores):\n",
-        "        \"\"\"\n",
-        "        Parameters:\n",
-        "        - scores: The scores to be checked.\n",
-        "\n",
-        "        Returns:\n",
-        "        - bool: True if the scores are real, otherwise False.\n",
-        "        \"\"\"\n",
-        "        return scores.real\n",
-        "\n",
-        "    def play(god, *players):\n",
-        "        \"\"\"\n",
-        "        Determines the player's move in a game.\n",
-        "\n",
-        "        Parameters:\n",
-        "        - god: The player making the move.\n",
-        "        - players: Other players in the game.\n",
-        "\n",
-        "        Returns:\n",
-        "        - int: The chosen card to play.\n",
-        "        \"\"\"\n",
-        "        best, other = max(god.cards), []\n",
-        "        for player in players:\n",
-        "            other += player.cards\n",
-        "\n",
-        "        if best >= max(other):\n",
-        "            return best\n",
-        "        else:\n",
-        "            return min(god.cards)\n",
-        "\n",
-        "    def card(draw):\n",
-        "        \"\"\"\n",
-        "        Draws a card based on the player's AI logic.\n",
-        "\n",
-        "        Parameters:\n",
-        "        - draw: The drawing logic.\n",
-        "\n",
-        "        Returns:\n",
-        "        - int: The drawn card.\n",
-        "        \"\"\"\n",
-        "        return draw.logic(draw)\n",
-        "\n",
-        "def rn_choice(logic):\n",
-        "    return logic.cards.pop(randint(0,len(logic.cards)-1))\n",
-        "\n",
-        "# # Example Usage:\n",
-        "# # Define an AI logic for drawing cards\n",
-        "# def draw_logic(draw):\n",
-        "#     # Replace this with your custom drawing logic\n",
-        "#     return randint(1, 10)\n",
-        "\n",
-        "# # Create a deck of cards (assuming a list of integers)\n",
-        "# deck_of_cards = list(range(1, 11))\n",
-        "\n",
-        "# # Create a player with the defined AI logic, deck, and name\n",
-        "# player1 = Player(AI=draw_logic, deck=deck_of_cards, name=\"Player1\")\n"
       ]
     },
     {
@@ -215,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 29,
       "metadata": {
         "id": "ED4UfwBEAUFo"
       },
@@ -241,60 +174,8 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "vVi14T0PAUFp"
-      },
-      "source": [
-        "###### The play function takes an arbitrary number of players (*game) as arguments.\n",
-        "###### 1. It initializes each player's real and best attributes to 0 and shuffles their cards.\n",
-        "###### 2. The resolve function is defined inside play. It takes a list of (player, card) pairs, where the card is drawn using the card method, and determines the winners.\n",
-        "###### 3. Winners are players with the highest card value. The function returns a list of winning players.\n",
-        "###### 4. The winners' real attribute is incremented.\n",
-        "###### 5. Each player's score list is updated by appending the result of the check method."
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "id": "qQ3WHTo3AUFp"
-      },
-      "outputs": [],
-      "source": [
-        "def play(*game):\n",
-        "    # Initialize each player's real and best score attributes to 0\n",
-        "    for player in game:\n",
-        "        player.real, player.best = 0, 0\n",
-        "        player.shuffle()\n",
-        "\n",
-        "    # Define a function 'resolve' to find the winners among the players\n",
-        "    def resolve(hand, by=[], best=-1):\n",
-        "        for player, card in hand:\n",
-        "            # Check if the card is equal to the best card, add player to 'by' list\n",
-        "            if best == card:\n",
-        "                by.append(player)\n",
-        "            # If the card is greater than the best, update 'best' and set 'by' to [player]\n",
-        "            if best < card:\n",
-        "                best = card\n",
-        "                by = [player]\n",
-        "        return by\n",
-        "\n",
-        "    # Use the 'resolve' function to find the winners among the players\n",
-        "    winners = resolve([(player, player.card()) for player in game])\n",
-        "\n",
-        "    # Increment the 'real' attribute for each winner\n",
-        "    for player in winners:\n",
-        "        player.real += 1\n",
-        "\n",
-        "    # Update each player's score by appending the result of the 'check' method\n",
-        "    for player in game:\n",
-        "        player.score.append(player.check())\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -302,21 +183,9 @@
         "id": "bQ1FJs9qAUFp",
         "outputId": "db8a8b2f-dd7c-4be1-f287-69813422c280"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Collecting statannot\n",
-            "  Downloading statannot-0.2.3-py3-none-any.whl (10 kB)\n",
-            "Installing collected packages: statannot\n",
-            "Successfully installed statannot-0.2.3\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "from joblib import Parallel, delayed\n",
-        "!pip install statannot\n",
+        "# !pip install statannot\n",
         "from statannot import add_stat_annotation\n",
         "import seaborn as sns\n",
         "from collections import Counter\n",
@@ -392,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 37,
       "metadata": {
         "id": "wXTVv46uIhB4"
       },
@@ -400,7 +269,7 @@
       "source": [
         "import numpy as np\n",
         "\n",
-        "def winners_union_resection_overlap(sorted_players, sigmas, resection):\n",
+        "def winners_union_resection_overlap(sorted_players, sigmas, resection, nodes):\n",
         "    \"\"\"\n",
         "    Check winners' performance based on cross-validation scores and resection overlap.\n",
         "\n",
@@ -415,8 +284,6 @@
         "\n",
         "    # Calculate group scores and resection matches\n",
         "    group_scores = {player: sum(sorted_players[player]) for player in sorted_players}\n",
-        "    resection_match = {player: [n for n in player if n in resection] for player in group_scores}\n",
-        "\n",
         "    # Calculate statistical measures\n",
         "    median = np.median(list(group_scores.values()))\n",
         "    mean = np.mean(list(group_scores.values()))\n",
@@ -424,15 +291,16 @@
         "\n",
         "    # Define threshold based on mean and standard deviations\n",
         "    thresh = mean + (std * sigmas)\n",
-        "    winners_above_thresh = [player for player in group_scores if group_scores[player] >= thresh]\n",
-        "\n",
-        "    if N_winners_above_thresh > 0:\n",
+        "    if any(value > 1 for value in list(group_scores.values())):\n",
+        "        winners_above_thresh = [player for player in group_scores if group_scores[player] >= thresh]\n",
+        "        N_winners_above_thresh = len(winners_above_thresh)\n",
+        "    \n",
         "        # Calculate overlap of the union of winners with the resection\n",
         "        winners_union = set().union(*[set(player) for player in winners_above_thresh])\n",
         "        resection_overlap_union = len(winners_union.intersection(resection))\n",
-        "        print(f\"Resection overlap with the union of winners: {resection_overlap_union}\")\n",
-        "\n",
-        "        return resection_overlap_union\n",
+        "        resection_overlap_union_norm = resection_overlap_union * (len(resection) / len(nodes)) * N_winners_above_thresh # normalized by probability of seleciting a resection node\n",
+        "        \n",
+        "        return resection_overlap_union, resection_overlap_union_norm\n",
         "\n",
         "    else:\n",
         "        return 0\n"
@@ -449,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "id": "7qcVgJ_iAUFq"
       },
@@ -464,7 +332,7 @@
         "\n",
         "summary_stat_label = [\"average\", \"mm\", \"coefvar\", \"max\", \"random\"]\n",
         "\n",
-        "Subject, Outcome, CM, R, Group_size, Strategy, Sigmas, N_winners, Mean_overlap_ratio, Median_overlap_winners, Mean_overlap_winners = [],[],[],[],[],[],[],[],[],[],[]\n",
+        "Subject, Outcome, CM, R, Group_size, Strategy, Sigmas, Union_resection_overlap, Union_resection_overlap_norm = [],[],[],[],[],[],[],[],[]\n",
         "\n",
         "for filename in scores_files:\n",
         "\n",
@@ -477,7 +345,7 @@
         "    rounds = re.sub(r'[^0-9]', '', params[4])\n",
         "    sub = re.sub(r'[^0-9]', '', params[6])\n",
         "\n",
-        "    surgical_outcome = 1 if sub in good_outcome_subjects else 0\n",
+        "    surgical_outcome = 1 if int(sub) in good_outcome_subjects else 0\n",
         "\n",
         "    # we need resection_nodes and group_size to check the winners\n",
         "    all_nodes = NODES[sub]\n",
@@ -488,11 +356,11 @@
         "    # load sorted_players\n",
         "    sorted_players = load(open(filename, \"rb\"))\n",
         "\n",
-        "    sigmas = [2,3,4]\n",
+        "    sigmas = [5]\n",
         "\n",
         "    for sigma in sigmas:\n",
         "\n",
-        "        union_resection_overlap = winners_union_resection_overlap(sorted_players, sigma, resection_nodes)\n",
+        "        union_resection_overlap, resection_overlap_union_norm = winners_union_resection_overlap(sorted_players, sigma, resection_nodes, all_nodes)\n",
         "\n",
         "        Subject.append(sub)\n",
         "        Outcome.append(surgical_outcome)\n",
@@ -501,17 +369,16 @@
         "        Sigmas.append(sigma)\n",
         "\n",
         "        Union_resection_overlap.append(union_resection_overlap)\n",
+        "        Union_resection_overlap_norm.append(resection_overlap_union_norm)\n",
         "\n",
-        "surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"Sigmas\":Sigmas, \"Union_Resection_Overlap\":Union_resection_overlap})\n",
+        "surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"Sigmas\":Sigmas, \"Union_Resection_Overlap\":Union_resection_overlap, \"Union_Resection_Overlap_Norm\":Union_resection_overlap_norm})\n",
         "surgical_outcome_prediciton_data.to_excel(path_game_scores+f\"surgical_outcome_data_{sigma}sigma_URI.xlsx\")"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "nvrm5qWoAUFq"
-      },
+      "metadata": {},
       "outputs": [],
       "source": []
     }
@@ -535,7 +402,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.16"
+      "version": "3.9.18"
     }
   },
   "nbformat": 4,
