--- a/notebooks/kfold_pairs_split_id.ipynb
+++ b/notebooks/kfold_pairs_split_id.ipynb
@@ -713,8 +713,8 @@
         "        result = REc(struct(nodes=nodes, pairs=base))\n",
         "        print(result)\n",
         "\n",
-        "        if bands is not None: REc(result).save(path_res + f\"{subject_id}-{woi}-{measure}-{bands}.res\")\n",
-        "        elif bands is None: REc(result).save(path_res + f\"{subject_id}-{woi}-{measure}.res\")\n",
+        "        if bands is not None: REc(result).save(path_res + f\"{subject_id}-{woi}-{measure}-{bands}.res\".replace(\" \",\"\"))\n",
+        "        elif bands is None: REc(result).save(path_res + f\"{subject_id}-{woi}-{measure}.res\".replace(\" \",\"\"))\n",
         "\n",
         "        timer_end()"
       ]
