--- a/notebooks/matches.ipynb
+++ b/notebooks/matches.ipynb
@@ -888,13 +888,13 @@
     }
    ],
    "source": [
-    "subs = [2,9,19,5] # GO\n",
+    "subs = [2] # GO\n",
     "# subs = [11] # BO\n",
     "\n",
     "rounds, turns, n_cards = 100, 10, 24\n",
     "\n",
     "strategies = [mm_choice, mx_choice, av_choice, rn_choice]\n",
-    "strategy_ext = [\"mm\", \"mx\", \"av\", \"rn\"]\n",
+    "strategy_ext = [\"mm\", \"rn\"]\n",
     "\n",
     "for sub in subs:\n",
     "    print(\"\\nSubject:\")\n",
