--- a/notebooks/outcome_prediction.ipynb
+++ b/notebooks/outcome_prediction.ipynb
@@ -125,7 +125,7 @@
         "\treturn list((pos_probs >= threshold).astype('int')) \n",
         "\n",
         "\n",
-        "def moving_thresh_auc(predictive_measure=[], outcome=[], moving_step=0.00001):\n",
+        "def moving_thresh_auc(predictive_measure=[], outcome=[], n_good=14, n_bad=7, moving_step=0.00001):\n",
         "    # returns AUC, best threshold, true negatives and true positives at the best threshold\n",
         "\n",
         "    thresholds = np.arange(0, np.max(predictive_measure), moving_step)\n",
@@ -139,8 +139,8 @@
         "    step = 0\n",
         "    for t in thresholds:    \n",
         "        g_l, b_l = to_labels(g, t), to_labels(b, t)\n",
-        "        tp = sum(g_l)/14 \n",
-        "        tn = b_l.count(0)/7\n",
+        "        tp = sum(g_l)/n_good \n",
+        "        tn = b_l.count(0)/n_bad\n",
         "        A = (tp + tn)/2\n",
         "        if A>A_top: \n",
         "            step=0\n",
@@ -205,7 +205,7 @@
         "            x_plot, y_plot = list(data.Mean_overlap_ratio), [\"good\" if val==1 else \"bad\" for val in data[\"Outcome\"]]\n",
         "\n",
         "            # calculate moving threshold-based AUC\n",
-        "            mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.00001)\n",
+        "            mauc = moving_thresh_auc(x_plot, y_plot, n_good=y_plot.count(\"good\"), n_bad=y_plot.count(\"bad\"), moving_step=0.00001)\n",
         "\n",
         "            group1 = [x for i,x in enumerate(x_plot) if y_plot[i]==\"good\"]\n",
         "            group0 = [x for i,x in enumerate(x_plot) if y_plot[i]==\"bad\"]\n",
