--- a/notebooks/rd_groups_match.ipynb
+++ b/notebooks/rd_groups_match.ipynb
@@ -178,7 +178,7 @@
     "           \"Scores\":list(count_sorted.keys())}\n",
     "\n",
     "fig, ax = plt.subplots(1, 2, gridspec_kw={'width_ratios': [4, 2]}, figsize=(6,3))\n",
-    "fig.tight_layout()ç\n",
+    "fig.tight_layout()\n",
     "sns.barplot(counted, x=\"Scores\", y=\"N_nodes\", ax=ax[0])\n",
     "ax[0].set_xlabel(\"Game score (Number of wins)\", fontsize=FONT_SIZE)\n",
     "ax[0].set_xticklabels(counted[\"Scores\"], rotation=90)\n",
