--- a/notebooks/Schelling_Model_Game.ipynb
+++ b/notebooks/Schelling_Model_Game.ipynb
@@ -101,7 +101,7 @@
         "        diff_nonstrat = np.abs(((old_neighborhood == 2)*self.kernel).sum() - ((new_neighborhood == 2)*self.kernel).sum())\n",
         "        diff_vacant = np.abs(((old_neighborhood == 3)*self.kernel).sum() - ((new_neighborhood == 3)*self.kernel).sum())\n",
         "\n",
-        "        connectivity_difference = diff_strat + diff_nonstrat + diff_vacant\n",
+        "        connectivity_difference = diff_strat*3 + diff_nonstrat*2 + diff_vacant\n",
         "\n",
         "        return -(connectivity_difference)\n",
         "\n",
@@ -217,6 +217,13 @@
         "plt.figure(figsize=(7, 5))\n",
         "plt.plot(list(max_groups.values()))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -229,7 +236,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.16"
     }
   },
   "nbformat": 4,
