--- a/notebooks/make_game_data_table_gamma.ipynb
+++ b/notebooks/make_game_data_table_gamma.ipynb
@@ -210,12 +210,12 @@
     "main_folder = \"/media/kivi/ADATA HV100/epigame-folder/\"\n",
     "path_res = main_folder + \"result/\"\n",
     "\n",
-    "woi = \"preseizure1\"\n",
+    "woi = \"preseizure2\"\n",
     "subjects = [id for id in range(1,22)]\n",
     "\n",
     "Subject, Pair, Labels, CM, CVS = [],[],[],[],[]\n",
     "\n",
-    "for bands in [(30,70),(70,150)]: #[None,(0,4),(4,8),(8,13),(13,30),(30,70),(70,150)]:\n",
+    "for bands in [None,(0,4),(4,8),(8,13),(13,30),(30,70),(70,150)]:\n",
     "\n",
     "    connectivity_measures = [\"PAC\", \"PEC\"] if bands is None else [\"SCR\", \"SCI\", \"PLV\", \"PLI\", \"CC\"]\n",
     "\n",
@@ -261,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
